--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-next": "15.5.3",
     "gh-pages": "^6.3.0",
     "postcss": "^8.5.6",
+    "rehype-figure": "^1.0.1",
     "rehype-pretty-code": "^0.14.1",
     "shiki": "^3.12.2",
     "tailwindcss": "^4.1.13",
